--- a/src/register.module.css
+++ b/src/register.module.css
@@ -1,18 +1,20 @@
 .formContainer {
   height: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3em;
 }
 
 .formWrapper {
   height: 100%;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 1em;
   background: white;
   padding: 3em;
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   gap: 2em;
   text-align: center;
 }
